# HMinCaml

./: .gitignore  HMinCaml.sln
HMinCaml/: HMinCaml.cabal
HMinCaml/Functional Tests/: Build.bat  Closures.minml  Currying.minml  Fibonacci.minml  Integer Arithemetic.minml  Recursive Functions.minml  Tuples.minml  import32.inc
HMinCaml/src/: Main.hs
HMinCaml/src/HMinCaml/: ClosureConversion.hs  Common.hs  GenerateCode.hs  InferTypes.hs  KNormalize.hs  Parser.hs  Simplify.hs  VariableLowering.hs
HMinCaml/src/Tests/: ClosureConversion.hs  Common.hs  GenerateCode.hs  InferTypes.hs  KNormalize.hs  Parser.hs  Simplify.hs  VariableLowering.hs
